Fixed replay bug and symbol sizing
Fixed the replay bug so replay button works. Also animation now stops when user changes slider value. Lastly fixed proportional sysmbols so that extreme values are not way too big.

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,10 @@ ul {
     width: 15px;
     height: 15px;
     display: inline-block;
-    margin-right: 5px;
+    margin-right: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
 }
 #countyGrowing {
     background: green;
